--- a/certifications.html
+++ b/certifications.html
@@ -189,8 +189,8 @@
             </svg>
           </a>
         </div>
-        <div class="title">Verified Certificate of IITBombayX</div>
-        <div class="issuer muted">Indian Institute of Technology, Bombay</div>
+        <div class="title">Guard Registration</div>
+        <div class="issuer muted">Bureau of Security and Investigative Services</div>
       </article>
 
       <article class="card" aria-label="Programming for Everyone with Python">
@@ -204,8 +204,8 @@
             </svg>
           </a>
         </div>
-        <div class="title">Programming for Everyone with Python</div>
-        <div class="issuer">University of Michigan</div>
+        <div class="title">Adult & Pediatric First Aid/CPR/AED</div>
+        <div class="issuer">American Red Cross</div>
       </article>
     </div>
 
