--- a/certifications.html
+++ b/certifications.html
@@ -116,17 +116,8 @@
     .ext svg{ width:16px; height:16px; stroke:var(--accent); }
     .ext:hover{ filter:brightness(1.08); }
 
-    /* Simple thumbnail for optional images inside cards */
-    .thumb{
-      width:100%;
-      height:auto;
-      display:block;
-      border-radius:10px;
-      border:1px solid rgba(255,255,255,.08);
-      margin-bottom:12px;
-    }
-
     .title{ font-size:18px; font-weight:800; line-height:1.25; margin-bottom:6px; }
+    .title a{ color:inherit; text-decoration:underline; text-underline-offset:3px; }
     .issuer{ color:#d8e6ff; font-weight:700; font-size:14px; opacity:.95; }
     .issuer.muted{ color:#cfcfcf; }
     .foot{ color:var(--muted); font-size:12px; margin-top:14px; }
@@ -188,11 +179,11 @@
     <!-- Security & CPR Training Section -->
     <h2 class="section-title nf">Security & CPR Training</h2>
     <div class="grid">
-      <!-- Security (attach card.JPG) -->
+      <!-- Security (link to card.JPG; no image shown) -->
       <article class="card" aria-label="Guard Registration">
         <div class="card-head">
-          <div class="icon gold">🎓</div>
-          <a class="ext" href="#" aria-label="Open certificate" target="_blank" rel="noopener">
+          <div class="icon gold">🛡️</div>
+          <a class="ext" href="card.JPG" aria-label="Open security card image" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
               <path d="M14 3h7v7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M21 3l-9 9" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
@@ -200,16 +191,17 @@
             </svg>
           </a>
         </div>
-        <img class="thumb" src="card.JPG" alt="Security guard registration card">
-        <div class="title">Guard Registration</div>
+        <div class="title">
+          <a href="card.JPG" target="_blank" rel="noopener">Guard Registration</a>
+        </div>
         <div class="issuer muted">Bureau of Security and Investigative Services</div>
       </article>
 
-      <!-- CPR (attach cpr.JPG) -->
+      <!-- CPR (link to cpr.JPG; no image shown) -->
       <article class="card" aria-label="Adult & Pediatric First Aid/CPR/AED">
         <div class="card-head">
-          <div class="icon gold">🐍</div>
-          <a class="ext" href="#" aria-label="Open certificate" target="_blank" rel="noopener">
+          <div class="icon gold">⛑️</div>
+          <a class="ext" href="cpr.JPG" aria-label="Open CPR certificate image" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
               <path d="M14 3h7v7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M21 3l-9 9" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
@@ -217,8 +209,9 @@
             </svg>
           </a>
         </div>
-        <img class="thumb" src="cpr.JPG" alt="CPR/AED certificate">
-        <div class="title">Adult & Pediatric First Aid/CPR/AED</div>
+        <div class="title">
+          <a href="cpr.JPG" target="_blank" rel="noopener">Adult &amp; Pediatric First Aid/CPR/AED</a>
+        </div>
         <div class="issuer">American Red Cross</div>
       </article>
     </div>
