Add new LinkedIn Learning and Coursera certificates
Added multiple LinkedIn Learning and Coursera certificates to the certifications page.

--- a/certifications.html
+++ b/certifications.html
@@ -270,6 +270,129 @@
         <div class="issuer muted">Udemy</div>
         <div class="foot">Issued Dec 2020</div>
       </article>
+
+      <!-- New LinkedIn Learning / Coursera certificates -->
+      <article class="card" aria-label="LinkedIn Learning Certificate 1">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/f3e39785ed150834d7d4e2692af74a20b69d17c1b030c1648e0718ccfe8c013c?u=35553996" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 1">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/f3e39785ed150834d7d4e2692af74a20b69d17c1b030c1648e0718ccfe8c013c?u=35553996" target="_blank" rel="noopener">LinkedIn Learning — Certificate 1</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 2">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/f97487f1025ce31399dcdb50375ef8f97966603aa93060dbb33381a516f48a7e?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 2">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/f97487f1025ce31399dcdb50375ef8f97966603aa93060dbb33381a516f48a7e?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 2</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 3">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/2eb4ed36179ca37335a0b8af6fe73d00f85abe5fe2c7c2a28b4f90b09ef6d6a7?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 3">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/2eb4ed36179ca37335a0b8af6fe73d00f85abe5fe2c7c2a28b4f90b09ef6d6a7?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 3</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 4">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/16e9c29e13a18a9cf6422a033c971955f5efdb6e33d57327b7d1f183da25dcab?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 4">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/16e9c29e13a18a9cf6422a033c971955f5efdb6e33d57327b7d1f183da25dcab?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 4</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 5">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/a9c0ad36214d5d581945a3bef95fa0a81a8f6fd027550924fe83f7c0fd9bca76?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 5">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/a9c0ad36214d5d581945a3bef95fa0a81a8f6fd027550924fe83f7c0fd9bca76?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 5</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 6">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/7772e12638c0f8eb85589ff674298bdd865b4f964cc6b6c08fb199701e598fbf?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 6">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/7772e12638c0f8eb85589ff674298bdd865b4f964cc6b6c08fb199701e598fbf?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 6</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 7">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/5465b43f1d041db7536d9cac2b3e4724ce03b0894b8ea7fbe519afac4bff6dd3?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 7">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/5465b43f1d041db7536d9cac2b3e4724ce03b0894b8ea7fbe519afac4bff6dd3?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 7</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 8">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/56569f3542b12b16fff64ee0a8954fb45b9136911d259d765b1bb4d41b7704ed?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 8">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/56569f3542b12b16fff64ee0a8954fb45b9136911d259d765b1bb4d41b7704ed?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 8</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 9">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/9a75951130c7aa48a361bcfccf297631ff78249901dd1bf94865bb315055edd1?u=35553996" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 9">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/9a75951130c7aa48a361bcfccf297631ff78249901dd1bf94865bb315055edd1?u=35553996" target="_blank" rel="noopener">LinkedIn Learning — Certificate 9</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="LinkedIn Learning Certificate 10">
+        <div class="card-head">
+          <div class="icon gold">📘</div>
+          <a class="ext" href="https://www.linkedin.com/learning/certificates/a0a5c5b6cb323dd3bf297c5e961e112e1e1d7b708cdbac272aae70ac32e53956?trk=share_certificate" target="_blank" rel="noopener" aria-label="Open LinkedIn Learning Certificate 10">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.linkedin.com/learning/certificates/a0a5c5b6cb323dd3bf297c5e961e112e1e1d7b708cdbac272aae70ac32e53956?trk=share_certificate" target="_blank" rel="noopener">LinkedIn Learning — Certificate 10</a></div>
+        <div class="issuer muted">LinkedIn Learning</div>
+      </article>
+
+      <article class="card" aria-label="Coursera Certificate">
+        <div class="card-head">
+          <div class="icon gold">🎓</div>
+          <a class="ext" href="https://www.coursera.org/account/accomplishments/verify/DYUMMWADFFX9?utm_source=ln&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course" target="_blank" rel="noopener" aria-label="Open Coursera Certificate">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.coursera.org/account/accomplishments/verify/DYUMMWADFFX9?utm_source=ln&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course" target="_blank" rel="noopener">Coursera — Verified Certificate</a></div>
+        <div class="issuer muted">Coursera</div>
+      </article>
+
     </div>
   </main>
 
