--- a/certifications.html
+++ b/certifications.html
@@ -392,8 +392,64 @@
         <div class="title"><a href="https://www.coursera.org/account/accomplishments/verify/DYUMMWADFFX9?utm_source=ln&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course" target="_blank" rel="noopener">Coursera — Verified Certificate</a></div>
         <div class="issuer muted">Coursera</div>
       </article>
-
     </div>
+
+    <!-- Google Guarantees Section -->
+    <h2 class="section-title nf">Google Guarantees</h2>
+    <div class="grid">
+      <article class="card" aria-label="Google IT Support Certificate">
+        <div class="card-head">
+          <div class="icon gold">🖥️</div>
+          <a class="ext" href="googleit.pdf" target="_blank" rel="noopener" aria-label="Open Google IT Support (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googleit.pdf" target="_blank" rel="noopener">Google IT Support</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+
+      <article class="card" aria-label="Google Cybersecurity Certificate">
+        <div class="card-head">
+          <div class="icon gold">🔐</div>
+          <a class="ext" href="googlecyber.pdf" target="_blank" rel="noopener" aria-label="Open Google Cybersecurity (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googlecyber.pdf" target="_blank" rel="noopener">Google Cybersecurity</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+
+      <article class="card" aria-label="Google Digital Marketing & E-commerce Certificate">
+        <div class="card-head">
+          <div class="icon gold">📈</div>
+          <a class="ext" href="googlemarket.pdf" target="_blank" rel="noopener" aria-label="Open Google Digital Marketing & E-commerce (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googlemarket.pdf" target="_blank" rel="noopener">Google Digital Marketing &amp; E-commerce</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+
+      <article class="card" aria-label="Google UX Design Certificate">
+        <div class="card-head">
+          <div class="icon gold">🎨</div>
+          <a class="ext" href="googleux.pdf" target="_blank" rel="noopener" aria-label="Open Google UX Design (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googleux.pdf" target="_blank" rel="noopener">Google UX Design</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+    </div>
+
   </main>
 
   <footer class="footer">
