--- a/certifications.html
+++ b/certifications.html
@@ -118,7 +118,7 @@
 
     .title{ font-size:18px; font-weight:800; line-height:1.25; margin-bottom:6px; }
     .title a{ color:inherit; text-decoration:underline; text-underline-offset:3px; }
-    .title.no-underline a{ text-decoration:none; }
+    .title.no-underline, .title.no-underline a{ text-decoration:none; }
     .issuer{ color:#d8e6ff; font-weight:700; font-size:14px; opacity:.95; }
     .issuer.muted{ color:#cfcfcf; }
     .foot{ color:var(--muted); font-size:12px; margin-top:14px; }
@@ -137,7 +137,6 @@
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar">
     <a class="brand nf" href="index.html#home">Angel Contreras</a>
     <div class="navlinks">
@@ -150,13 +149,11 @@
     </div>
   </nav>
 
-  <!-- Header -->
   <header class="page-hero">
     <h1 class="nf">Certifications</h1>
   </header>
 
   <main class="section">
-    <!-- Latest Acquirement Section -->
     <h2 class="section-title nf">Latest Acquirement</h2>
     <div class="grid">
       <article class="card" aria-label="AI Application Development Certificate">
@@ -176,10 +173,8 @@
       </article>
     </div>
 
-    <!-- Security & CPR Training Section -->
     <h2 class="section-title nf">Security & CPR Training</h2>
     <div class="grid">
-      <!-- Security (link to card.JPG; no image shown) -->
       <article class="card" aria-label="Guard Registration">
         <div class="card-head">
           <div class="icon gold">🛡️</div>
@@ -187,17 +182,14 @@
             <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
               <path d="M14 3h7v7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M21 3l-9 9" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M10 7H5a 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </a>
         </div>
-        <div class="title no-underline">
-          <a href="card.JPG" target="_blank" rel="noopener">Guard Registration</a>
-        </div>
+        <div class="title no-underline">Guard Registration</div>
         <div class="issuer muted">Bureau of Security and Investigative Services</div>
       </article>
 
-      <!-- CPR (link to cpr.JPG; no image shown) -->
       <article class="card" aria-label="Adult & Pediatric First Aid/CPR/AED">
         <div class="card-head">
           <div class="icon gold">⛑️</div>
@@ -205,18 +197,15 @@
             <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
               <path d="M14 3h7v7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M21 3l-9 9" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M10 7H5a 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </a>
         </div>
-        <div class="title no-underline">
-          <a href="cpr.JPG" target="_blank" rel="noopener">Adult &amp; Pediatric First Aid/CPR/AED</a>
-        </div>
+        <div class="title no-underline">Adult &amp; Pediatric First Aid/CPR/AED</div>
         <div class="issuer">American Red Cross</div>
       </article>
     </div>
 
-    <!-- Academic Achievements Section -->
     <h2 class="section-title nf">Academic Achievements</h2>
     <div class="grid">
       <article class="card" aria-label="Associates in Computer Information Systems">
@@ -252,7 +241,6 @@
       </article>
     </div>
 
-    <!-- Technical Certificates Section -->
     <h2 class="section-title nf">Technical Certificates</h2>
     <div class="grid">
       <article class="card" aria-label="Typescript Course">
@@ -384,4 +372,89 @@
       <article class="card" aria-label="Coursera Certificate">
         <div class="card-head">
           <div class="icon gold">🎓</div>
-          <a class="ext" href="https://www.coursera.org/
+          <a class="ext" href="https://www.coursera.org/account/accomplishments/verify/DYUMMWADFFX9?utm_source=ln&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course" target="_blank" rel="noopener" aria-label="Open Coursera Certificate">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/></svg>
+          </a>
+        </div>
+        <div class="title"><a href="https://www.coursera.org/account/accomplishments/verify/DYUMMWADFFX9?utm_source=ln&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course" target="_blank" rel="noopener">Coursera — Verified Certificate</a></div>
+        <div class="issuer muted">Coursera</div>
+      </article>
+    </div>
+
+    <h2 class="section-title nf">Google Guarantees</h2>
+    <div class="grid">
+      <article class="card" aria-label="Google IT Support Certificate">
+        <div class="card-head">
+          <div class="icon gold">🖥️</div>
+          <a class="ext" href="googleit.pdf" target="_blank" rel="noopener" aria-label="Open Google IT Support (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googleit.pdf" target="_blank" rel="noopener">Google IT Support</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+
+      <article class="card" aria-label="Google Cybersecurity Certificate">
+        <div class="card-head">
+          <div class="icon gold">🔐</div>
+          <a class="ext" href="googlecyber.pdf" target="_blank" rel="noopener" aria-label="Open Google Cybersecurity (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googlecyber.pdf" target="_blank" rel="noopener">Google Cybersecurity</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+
+      <article class="card" aria-label="Google Digital Marketing & E-commerce Certificate">
+        <div class="card-head">
+          <div class="icon gold">📈</div>
+          <a class="ext" href="googlemarket.pdf" target="_blank" rel="noopener" aria-label="Open Google Digital Marketing & E-commerce (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googlemarket.pdf" target="_blank" rel="noopener">Google Digital Marketing &amp; E-commerce</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+
+      <article class="card" aria-label="Google UX Design Certificate">
+        <div class="card-head">
+          <div class="icon gold">🎨</div>
+          <a class="ext" href="googleux.pdf" target="_blank" rel="noopener" aria-label="Open Google UX Design (PDF)">
+            <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
+              <path d="M14 3h7v7"/><path d="M21 3l-9 9"/><path d="M10 7H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-5"/>
+            </svg>
+          </a>
+        </div>
+        <div class="title"><a href="googleux.pdf" target="_blank" rel="noopener">Google UX Design</a></div>
+        <div class="issuer muted">Google Career Certificates</div>
+      </article>
+    </div>
+
+  </main>
+
+  <footer class="footer">
+    <nav class="links">
+      <a href="mailto:angel@example.com">Email</a>
+      <a href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener">LinkedIn</a>
+      <a href="https://github.com" target="_blank" rel="noopener">GitHub</a>
+      <a href="Charter.html">Professional</a>
+      <a href="skills.html">Skills</a>
+      <a href="projects.html">Projects</a>
+      <a href="certifications.html" aria-current="page">Certifications</a>
+      <a href="contact.html" id="hireLink">Hire Me</a>
+      <a href="#top" onclick="window.scrollTo({top:0,behavior:'smooth'})">Back to top</a>
+    </nav>
+    <p class="copyright">© <span id="year"></span> Angel Contreras. All rights reserved.</p>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>                      
