--- a/moviesshows.html
+++ b/moviesshows.html
@@ -15,7 +15,7 @@
       --muted-2:#9a9a9a;
       --accent:#E50914;
       --card:#1c1c1c;
-      --space:24px; /* Unified spacing variable */
+      --space:24px;
     }
 
     *{margin:0;padding:0;box-sizing:border-box}
@@ -132,7 +132,8 @@
       inset:0;
       width:100%;
       height:100%;
-      object-fit:contain;
+      object-fit:cover;
+      object-position:center top;
       display:block;
     }
 
