--- a/videogames.html
+++ b/videogames.html
@@ -17,7 +17,7 @@
       --accent-2:#ff8e66;
       --card-shadow: 0 16px 40px rgba(0,0,0,.45);
       --radius:14px;
-      --space:24px; /* unified spacing variable */
+      --space:24px;
     }
 
     *{box-sizing:border-box;margin:0;padding:0}
@@ -133,7 +133,8 @@
       inset:0;
       width:100%;
       height:100%;
-      object-fit:contain;
+      object-fit:cover;
+      object-position:center top;
       display:block;
     }
 
